Update OpenAPI schema
