# packages/hidp/docs/openapi/schema.json
@@ -6,6 +6,49 @@
         "description": "Hello, ID Please"
     },
     "paths": {
+        "/api/email-verified/": {
+            "get": {
+                "operationId": "email_verified_retrieve",
+                "tags": [
+                    "email-verified"
+                ],
+                "security": [
+                    {
+                        "cookieAuth": []
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/GetEmailVerifiedResponse"
+                                }
+                            }
+                        },
+                        "description": ""
+                    }
+                }
+            }
+        },
+        "/api/email-verified/resend/": {
+            "post": {
+                "operationId": "email_verified_resend_create",
+                "tags": [
+                    "email-verified"
+                ],
+                "security": [
+                    {
+                        "cookieAuth": []
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "No response body"
+                    }
+                }
+            }
+        },
         "/api/login/": {
             "post": {
                 "operationId": "login_create",
@@ -195,6 +238,17 @@
     },
     "components": {
         "schemas": {
+            "GetEmailVerifiedResponse": {
+                "type": "object",
+                "properties": {
+                    "email_verified": {
+                        "type": "boolean"
+                    }
+                },
+                "required": [
+                    "email_verified"
+                ]
+            },
             "Login": {
                 "type": "object",
                 "properties": {
